--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -1,9 +1,9 @@
-.body{
-    height: 100vh;
-    overflow: hidden;
-    background: url('https://images.unsplash.com/photo-1632059368252-be6d65abc4e2?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80') center content-box;
+.body{    
+    // background-color: #222;
+    height: 100%;
     .b-form {
-        margin-top: 10rem;
+        padding-top: 5rem;
         width: 350px;
     }
+
 }
