--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,52 +1,55 @@
-<tui-root class="body">
-    <h4 class="text-white p-3">L<small>eave</small> M<small>anagement</small> S<small>ystem</small> </h4>
-    <form
-    class="b-form container d-flex flex-column gap-1"
-    [formGroup]="testForm"
+<div class="body">
+  <tui-loader
+  size="xl"
+  [showLoader]="load"
+  [overlay]="true"
 >
-    <h1 class="text-center mb-5 text-white">Login</h1>
+  <form
+    class="b-form container d-flex flex-column gap-1"
+    [formGroup]="loginForm"
+  >
+  <div class="island-card p-3">
+    <h1 class="text-center  text-center tui-form__header">Login</h1>
     <div>
-        <p class="wrapper wrapper_dark">
-            <tui-input
-                formControlName="email"
-                tuiMode="onDark"
-                [tuiTextfieldCleaner]="true"
-            >
-                Type an email
-                <input
-                    tuiTextfield
-                    placeholder="mail@mail.ru"
-                    type="email"
-                />
-            </tui-input>
-          
-        </p>
+      <p class="wrapper wrapper_dark">
+        <tui-notification
+          status="error"
+          class="tui-space_vertical-4"
+          *ngIf="invalidPassword && loginForm.dirty"
+        >
+          Invalid Password
+        </tui-notification>
+        <tui-input
+          formControlName="id"
+          tuiMode="onDark"
+          [tuiTextfieldCleaner]="true"
+        >
+          Enter your ID*
+          <input tuiTextfield placeholder="PW###" type="text" />
+        </tui-input>
+      </p>
     </div>
     <div>
-        <p class="wrapper wrapper_dark">
-    <tui-input-password
-    formControlName="password"
-    class="tui-space_top-2"
->
-    Type a password
-    <input
-        tuiTextfield
-        placeholder="Make it secure!"
-    />
-</tui-input-password>
-        </p>
+      <p class="wrapper wrapper_dark">
+        <tui-input-password formControlName="password" class="tui-space_top-2">
+          Enter password*
+          <input tuiTextfield placeholder="" />
+        </tui-input-password>
+      </p>
     </div>
     <div class="tui-form__buttons">
         <button
-        tuiButton
-        type="button"
-        class="tui-space_right-3 tui-space_bottom-3"
-        (click)="onSubmit()"
-        [disabled]="testForm.invalid"
-    >
-        Submit
-    </button>
+          tuiButton
+          appearance="primary"
+          type="button"
+          class="tui-space_right-3 tui-space_bottom-3 tui-form__button"
+          (click)="onSubmit()"
+          [disabled]="loginForm.invalid"
+        >
+          Login
+        </button>
     </div>
-</form>
-
-</tui-root>
+  </div>
+  </form>
+</tui-loader>
+</div>
