--- a/src/app/manage-holidays/manage-holidays.component.html
+++ b/src/app/manage-holidays/manage-holidays.component.html
@@ -7,32 +7,31 @@
       </a>
     </ng-container>
   </tui-breadcrumbs>
-  <div class="mb-3 d-flex justify-content-between">
-    <form #filter="ngForm" class="d-flex align-items-center gap-2">
-      <mat-form-field class="flex-grow-1"
+  <div class="mb-3 d-flex justify-content-between align-items-center">
+      <mat-form-field
       appearance="outline"
       >
         <mat-label>Filter</mat-label>
         <input
           matInput
-          (input)="filterHolidays(filter)"
+          (keyup)="filterHolidays(filter.value)"
           placeholder="Ex. Republic Day"
-          ngModel
-          name="filter"
+          name="filterText"
+          #filter
         />
       </mat-form-field>
-    </form>
+
     <div>
       <button
         tuiButton
         appearance="flat"
         class="me-2"
-        size="xl"
+        size="s"
         (click)="loadHolidays()"
       >
-        Refresh <tui-svg src="tuiIconRefreshCw"></tui-svg>
+        <tui-svg src="tuiIconRefreshCwLarge"></tui-svg>
       </button>
-    <button tuiButton appearance="secondary" (click)="sortHolidays()" size="xl"  type="button">
+    <button tuiButton appearance="secondary" (click)="sortHolidays()" size="s"  type="button">
       Sort
       <tui-svg src="tuiIconSortOff"></tui-svg>
     </button>
