fixed file structure

--- a/src/app/components/landingpage/landingpage.component.html
+++ b/src/app/components/landingpage/landingpage.component.html
@@ -1,12 +1,19 @@
 <div class="container p-5 text-center">
     <img src="https://educloud.app/lms/src/erp/ec-lms.png" alt="abstract image of a team working">
+    <div class="hero-text my-3">
+        Seamless Leave Requests, Enhanced Productivity – Try Our System Today
+    </div>
     <div class="d-flex my-4 align-items-center justify-content-center gap-2">
-        <button [routerLink]="['/login']" tuiButton
-        appearance="primary"
+        <button 
+        tuiButton
+        appearance="secondary"
         type="button"
         iconRight="tuiIconChevronRightLarge"
-        class="my-4"
+        class="my-3"
         (click)="openFullScreen()"
         >Get Started</button>
     </div>
+    <div class="footer">
+        Made with <tui-svg src="tuiIconHeart"></tui-svg> by <a tuiLink href="https://waglesathwik.onrender.com">waglesathwik</a>
+      </div>
 </div>
