--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -1,9 +1,25 @@
-.body{    
-    // background-color: #222;
+.body {
     height: 100%;
+    align-items: center;
+    aside {
+        background-color: var(--tui-primary);
+        color: white;
+        height: 100%;
+    }
     .b-form {
-        padding-top: 5rem;
         width: 350px;
     }
-
+    .hero-section {
+        width: 40vw;
+    }
+    .hero-text {
+        font-size: 1rem;
+        font-weight: 400;
+        line-height: 2rem;
+    }
+    button{
+        margin: 0 auto;
+    }
 }
+
+
