made mat table responsive

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -58,7 +58,8 @@
       </div>
     </div>
     <div class="content">
-      <router-outlet></router-outlet>
+      <!-- <app-sidebar class="d-none d-lg-block"></app-sidebar> -->
+      <router-outlet class=""></router-outlet>
     </div>
   </div>
 </tui-root>
