--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -7,12 +7,10 @@
   height: 100vh;
   .content {
     flex: 1 1 auto;
-    // background-color: rgba(#222,.5);
-    // color: white;
   }
   .appbar {
-    background-color: var(--tui-primary);
-    color: white;
+    background-color:#222;
+    color: #fff;
     .logo {
       font-size: 1.4rem;
       font-weight: 600;
