--- a/src/app/components/landingpage/landingpage.component.html
+++ b/src/app/components/landingpage/landingpage.component.html
@@ -1,6 +1,6 @@
-<div class="container p-5 text-center">
+<div class="container d-flex justify-content-center align-items-center flex-column h-100">
     <img src="https://educloud.app/lms/src/erp/ec-lms.png" alt="abstract image of a team working">
-    <div class="hero-text my-3">
+    <div class="hero-text my-3 text-center">
         Seamless Leave Requests, Enhanced Productivity – Try Our System Today
     </div>
     <div class="d-flex my-4 align-items-center justify-content-center gap-2">
@@ -14,6 +14,6 @@
         >Get Started</button>
     </div>
     <div class="footer">
-        Made with <tui-svg src="tuiIconHeart"></tui-svg> by <a tuiLink href="https://waglesathwik.onrender.com">waglesathwik</a>
+        Made with <tui-svg src="tuiIconHeart"></tui-svg> by <a href="https://waglesathwik.onrender.com">waglesathwik</a>
       </div>
 </div>
