--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,24 +1,23 @@
-<div class="d-flex body">
-  <aside
-    class="d-none d-lg-flex flex-column align-items-center justify-content-center hero-section"
+<div class="d-flex flex-column-reverse flex-lg-row body w-100 h-100 align-items-center">
+  <section
+    class="d-flex h-100 w-100 flex-column justify-content-center align-items-center hero-section"
   >
     <img
       class="img-fluid"
       src="https://educloud.app/lms/src/erp/ec-lms.png"
       alt="abstract image of a team working"
     />
-    <div class="hero-text my-3">
-      Seamless Leave Requests, Enhanced Productivity – Try Our System Today
+    <div class="hero-text my-3 w-75">
+      Leave Management Made Simple: Focus on Work, We Handle the Rest
     </div>
-  </aside>
+  </section>
 
   <form
-    class="b-form container"
+    class="b-form w-50 mx-auto"
     [formGroup]="loginForm"
   >
     <tui-loader size="xl" [showLoader]="load" [overlay]="true">
-      <div class="island-card">
-        <h1 class="text-center text-center tui-form__header">Login</h1>
+        <h1 class="text-center tui-form__header">Login Form</h1>
         <div>
           <p class="wrapper wrapper_dark">
             <tui-notification
@@ -52,7 +51,7 @@
         <div class="tui-form__buttons">
           <button
             tuiButton
-            appearance="primary"
+            appearance="secondary"
             type="button"
             class="tui-form__button"
             (click)="onSubmit()"
@@ -62,7 +61,6 @@
             <tui-svg src="tuiIconLogIn"></tui-svg>
           </button>
         </div>
-      </div>
     </tui-loader>
   </form>
 </div>
