--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -1,25 +1,36 @@
 .body {
+  section {
+    background-color: var(--tui-primary);
+    color: white;
     height: 100%;
-    align-items: center;
-    aside {
-        background-color: var(--tui-primary);
-        color: white;
-        height: 100%;
+    img {
+      width: 80%;
     }
-    .b-form {
-        width: 350px;
-    }
-    .hero-section {
-        width: 40vw;
-    }
-    .hero-text {
-        font-size: 1rem;
-        font-weight: 400;
-        line-height: 2rem;
-    }
-    button{
-        margin: 0 auto;
-    }
+  }
+  .b-form {
+    min-width: 300px;
+    padding: 5rem 2rem;
+    border-radius: 10px;
+    // box-shadow: rgba(0, 0, 0, 0.2) 0px 20px 30px;
+
+  }
+  .hero-section {
+    width: 40vw;
+  }
+  .hero-text {
+    font-size: 1.1rem;
+    font-weight: 400;
+    line-height: 2rem;
+  }
+  button {
+    margin: 0 auto;
+  }
 }
 
-
+@media  (max-width: 992px) {
+    .b-form {
+        // position: absolute;
+        height: 50%;
+    }
+    
+}
