--- a/src/app/components/landingpage/landingpage.component.html
+++ b/src/app/components/landingpage/landingpage.component.html
@@ -1,4 +1,4 @@
-<div class="container d-flex justify-content-center align-items-center flex-column h-100">
+<div class="mt-5 d-flex justify-content-center align-items-center flex-column h-100">
     <img src="https://educloud.app/lms/src/erp/ec-lms.png" alt="abstract image of a team working">
     <div class="hero-text my-3 text-center">
         Seamless Leave Requests, Enhanced Productivity – Try Our System Today
