--- a/src/app/components/landingpage/landingpage.component.scss
+++ b/src/app/components/landingpage/landingpage.component.scss
@@ -1,8 +1,17 @@
-.hero-text {
+:host {
+    height: 100%;
+  .hero-text {
     font-weight: 400;
     font-size: 1.2rem;
     line-height: 2rem;
+  }
+  img {
+    width: 40%;
+  }
 }
-img {
-    width: 70%;
+
+@media (max-width: 767px) {
+    img {
+        width: 70%
+    }
 }
