--- a/src/app/manage-employees/userform/userform.component.html
+++ b/src/app/manage-employees/userform/userform.component.html
@@ -59,6 +59,7 @@
       type="button"
       class="tui-form__button"
       (click)="onSubmit()"
+      [disabled]="userForm.invalid"
     >
       Submit
     </button>
