--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,15 +1,11 @@
 // * {
 //     border: red 1px solid;
 // }
-.body {
+:host {
   display: flex;
   flex-flow: column;
-  height: 100vh;
-  .content {
-    flex: 1 1 auto;
-  }
   .appbar {
-    background-color:#222;
+    background-color:var(--tui-primary);
     color: #fff;
     .logo {
       font-size: 1.4rem;
