--- a/src/app/manage-employees/list-employees/list-employees.component.scss
+++ b/src/app/manage-employees/list-employees/list-employees.component.scss
@@ -6,7 +6,7 @@
 .contain {
   border: 1px solid rgba(black, 0.1);
   border-radius: 10px;
-  overflow-x: scroll;
+  // overflow-x: scroll;
 }
 
 //   @media screen and (max-width: 960px) {
