Revert "fixed ui"
This reverts commit 637c73c2b787447be6d273f1c82b75f65d594da3.

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,11 +1,15 @@
 // * {
 //     border: red 1px solid;
 // }
-:host {
+.body {
   display: flex;
   flex-flow: column;
+  height: 100vh;
+  .content {
+    flex: 1 1 auto;
+  }
   .appbar {
-    background-color:var(--tui-primary);
+    background-color:#222;
     color: #fff;
     .logo {
       font-size: 1.4rem;
