--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -1,29 +1,22 @@
-$tui-primary: var(--tui-primary);
-:host {
-  display: flex;
-  height: 100%;
-  .hero-section {
-    background-color: $tui-primary;
+.body {
+  section {
+    background-color: var(--tui-primary);
     color: white;
-    height: 100vh;
-    width: 50%;
+    height: 100%;
     img {
-      width: 60%;
+      width: 80%;
     }
   }
-  .login-container{
-    flex: 1 1 auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    .login-form {
-      width: 340px;
-      padding: 4rem 1rem;
-      border-radius: 10px;
-      // box-shadow: rgba(black,.1) 0px 20px 30px;
-    }
-  }
+  .b-form {
+    min-width: 300px;
+    padding: 5rem 2rem;
+    border-radius: 10px;
+    // box-shadow: rgba(0, 0, 0, 0.2) 0px 20px 30px;
 
+  }
+  .hero-section {
+    width: 40vw;
+  }
   .hero-text {
     font-size: 1.1rem;
     font-weight: 400;
@@ -35,14 +28,9 @@ $tui-primary: var(--tui-primary);
 }
 
 @media  (max-width: 992px) {
-
-  :host {
-    flex-direction: column-reverse;
-    .hero-section {
-      height: 40vh;
-      width: 100%;
-    } 
+    .b-form {
+        // position: absolute;
+        height: 50%;
+    }
     
-  }
-
 }
