--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <tui-root>
-  <div>
+  <div class="body">
     <!-- app navbar  -->
     <div
       class="d-flex appbar sticky-top overlay container-fluid justify-content-between align-items-center"
