--- a/src/app/manage-employees/list-employees/list-employees.component.html
+++ b/src/app/manage-employees/list-employees/list-employees.component.html
@@ -3,32 +3,33 @@
   <tui-breadcrumbs size="l" class="tui-space_top-2 my-4 container">
     <ng-container>
       <a *tuiItem tuiLink> Manage </a>
-      <a *tuiItem tuiLink (click)="showForm = false"> Employees </a>
+      <a *tuiItem tuiLink> Employees </a>
     </ng-container>
   </tui-breadcrumbs>
 
-  <!-- add user form -->
-  <ng-template let-observer #form>
-    <app-userform
-      [observer]="observer"
-      (done)="addAlert()"
-      [edit]="false"
-    ></app-userform>
-  </ng-template>
-
   <!-- View employee list -->
 
-  <div class="mt-lg-5 container" *ngIf="!showForm">
-    <div class="d-flex justify-content-between align-items-center">
-      <mat-form-field class="form-field" appearance="outline">
+  <div class="mt-lg-5 container">
+    <div class="d-flex justify-content-between align-items-center mb-3">
+      <mat-form-field class="form-field d-none" appearance="outline">
         <mat-label>Filter</mat-label>
         <input
           matInput
           (keyup)="applyFilter($event)"
-          placeholder="Ex. Mia"
+          placeholder="Ex. John"
           #input
         />
       </mat-form-field>
+      <tui-input class="w-50 w-lg-25">
+        Filter
+        <input
+          tuiTextfield
+          type="text"
+          (keyup)="applyFilter($event)"
+          placeholder="Ex. John"
+          #input
+        />
+      </tui-input>
       <div>
         <button
           tuiButton
@@ -41,6 +42,15 @@
         </button>
         <button tuiButton appearance="flat" size="s" (click)="showDialog(form)">
           Add <tui-svg src="tuiIconUserPlus"></tui-svg>
+
+          <!-- add user form -->
+          <ng-template let-observer #form>
+            <app-userform
+              [observer]="observer"
+              (done)="addAlert()"
+              [edit]="false"
+            ></app-userform>
+          </ng-template>
         </button>
       </div>
     </div>
@@ -103,23 +113,24 @@
                 ></tui-svg>
 
                 <ng-template let-observer #more>
+                  <div class="display-5 mb-4">Actions for {{ row.id }}</div>
 
-                    <div class="display-5 mb-4">
-                        Actions for {{row.id}}
-                    </div>
-                
                   <button
                     tuiButton
                     icon="tuiIconEditLarge"
-                    (click)="observer.complete();showDialog(editform)"
-                  >Edit</button>
+                    (click)="observer.complete(); showDialog(editform)"
+                  >
+                    Edit
+                  </button>
                   <button
                     tuiButton
                     appearance="secondary-destructive"
                     icon="tuiIconTrash2Large"
-                    (click)="observer.complete();showDialog(template)"
+                    (click)="observer.complete(); showDialog(template)"
                     class="ms-2"
-                  >Delete</button>
+                  >
+                    Delete
+                  </button>
                 </ng-template>
                 <div class="d-none d-lg-block">
                   <button
@@ -190,7 +201,7 @@
 
           <!-- Row shown when there is no matching data. -->
           <tr *matNoDataRow>
-            <td class="text-center text-muted pt-5 h2" colspan="4">
+            <td class="text-center text-muted pt-5 ps-3 h2" colspan="4">
               No Matching Data Found
             </td>
           </tr>
