--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -11,7 +11,7 @@ $tui-primary: var(--tui-primary);
       width: 60%;
     }
   }
-  .login-container{
+  .login-container {
     flex: 1 1 auto;
     display: flex;
     justify-content: center;
@@ -20,7 +20,10 @@ $tui-primary: var(--tui-primary);
       width: 340px;
       padding: 4rem 1rem;
       border-radius: 10px;
-      // box-shadow: rgba(black,.1) 0px 20px 30px;
+      transition: all 1s ease;
+      &:hover {
+        box-shadow: rgba(black, 0.1) 0px 20px 30px;
+      }
     }
   }
 
@@ -34,15 +37,12 @@ $tui-primary: var(--tui-primary);
   }
 }
 
-@media  (max-width: 992px) {
-
+@media (max-width: 992px) {
   :host {
     flex-direction: column-reverse;
     .hero-section {
       height: 40vh;
       width: 100%;
-    } 
-    
+    }
   }
-
 }
