--- a/src/app/manage-holidays/list-holidays/list-holidays.component.html
+++ b/src/app/manage-holidays/list-holidays/list-holidays.component.html
@@ -1,5 +1,5 @@
 <div class="container-island container">
-    <tui-breadcrumbs size="l" class="tui-space_top-2 my-4">
+    <tui-breadcrumbs size="l" class="py-4">
       <ng-container>
         <a *tuiItem tuiLink routerLink="/admin" > Manage </a>
         <a *tuiItem tuiLink routerLink="/holidays" routerLinkActive="link-active">
