--- a/src/app/manage-employees/list-employees/list-employees.component.scss
+++ b/src/app/manage-employees/list-employees/list-employees.component.scss
@@ -1,5 +1,5 @@
 .admin-body {
-  min-height: calc(100vh - 56px -  1.5rem);
+  min-height: calc(100vh - 56px);
   background-color: var(--tui-base-01);
   border-radius: 10px;
   color: var(--tui-text-08);
