--- a/src/app/components/landingpage/landingpage.component.scss
+++ b/src/app/components/landingpage/landingpage.component.scss
@@ -1,8 +1,18 @@
-.hero-text {
-    font-weight: 400;
-    font-size: 1.2rem;
-    line-height: 2rem;
+*{
+    border: red 1px solid ;
 }
-img {
-    width: 70%;
+.body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    .hero-text {
+        font-weight: 400;
+        font-size: 1.2rem;
+        line-height: 2rem;
+    }
+    img {
+        width: 70%;
+    }
 }
