added accept/reject feature for leave

--- a/src/app/components/landingpage/landingpage.component.html
+++ b/src/app/components/landingpage/landingpage.component.html
@@ -1,4 +1,5 @@
-<div class="container body">
+<div class="body">
+<section class="container hero-section">
     <img src="https://educloud.app/lms/src/erp/ec-lms.png" alt="abstract image of a team working">
     <div class="hero-text my-3 text-center">
         Seamless Leave Requests, Enhanced Productivity – Try Our System Today
@@ -14,6 +15,7 @@
         >Get Started</button>
     </div>
     <div class="footer">
-        Made with <tui-svg src="tuiIconHeart"></tui-svg> by <a href="https://waglesathwik.onrender.com">waglesathwik</a>
+        Made with <tui-svg src="tuiIconHeart"></tui-svg> by <a style="color: white;" href="https://waglesathwik.onrender.com">waglesathwik</a>
       </div>
+</section>
 </div>
