--- a/src/app/manage-leaves/leave-list/leave-list.component.scss
+++ b/src/app/manage-leaves/leave-list/leave-list.component.scss
@@ -1,6 +1,8 @@
 .leave-container {
   min-height: calc(100vh - 56px);
-
+  .muted {
+    color: gray;
+  }
   .leave-type {
     border: 1px solid rgba(black, 0.1);
     width: 25px;
