--- a/src/app/manage-holidays/list-holidays/list-holidays.component.html
+++ b/src/app/manage-holidays/list-holidays/list-holidays.component.html
@@ -1,4 +1,4 @@
-<div class="container-island container">
+<div class="body container">
   <tui-breadcrumbs size="l" class="py-4">
     <ng-container>
       <a *tuiItem tuiLink routerLink="/admin"> Manage </a>
@@ -7,7 +7,9 @@
       </a>
     </ng-container>
   </tui-breadcrumbs>
-  <div class="mt-lg-5 mb-3 d-flex justify-content-between align-items-center">
+
+
+  <div class="mt-3 d-flex justify-content-between align-items-center">
     <mat-form-field appearance="outline">
       <mat-label>Filter</mat-label>
       <input
@@ -41,8 +43,10 @@
       </button>
     </div>
   </div>
+
+
   <tui-loader size="xl" class="mt-3" [showLoader]="loader" [overlay]="true">
-    <div class="tui-row container-fluid">
+    <div class="row">
       <div
         class="col-12 col-md-4 col-lg-4 my-2"
         *ngFor="let item of holidays; let i = index"
