--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -3,11 +3,12 @@
       [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
       [mode]="(isHandset$ | async) ? 'over' : 'side'"
       [opened]="(isHandset$ | async) === false">
-    <mat-toolbar><tui-svg src="tuiIconUserLarge" class="me-2"></tui-svg> Admin</mat-toolbar>
+    <mat-toolbar><tui-svg src="tuiIconUserLarge" class="me-2"></tui-svg> {{name | uppercase}}</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item routerLink="admin" routerLinkActive="link-active"><tui-svg src="tuiIconUsers"></tui-svg> Employees</a>
-      <a mat-list-item routerLink="holidays" routerLinkActive="link-active"><tui-svg src="tuiIconCalendar"></tui-svg> Holidays</a>
-      <a mat-list-item routerLink="leaves" routerLinkActive="link-active"><tui-svg src="tuiIconCreditCard"></tui-svg> Leaves</a>
+      <a mat-list-item routerLink="user" [routerLinkActive]="['is-active']" *ngIf="isClient"><tui-svg src="tuiIconUsers"></tui-svg> Dashboard</a>
+      <a mat-list-item routerLink="admin" [routerLinkActive]="['is-active']" *ngIf="!isClient"><tui-svg src="tuiIconUsers"></tui-svg> Employees</a>
+      <a mat-list-item routerLink="holidays" [routerLinkActive]="['is-active']" *ngIf="!isClient"><tui-svg src="tuiIconCalendar"></tui-svg> Holidays</a>
+      <a mat-list-item routerLink="leaves" [routerLinkActive]="['is-active']" *ngIf="!isClient"><tui-svg src="tuiIconCreditCard"></tui-svg> Leaves</a>
     </mat-nav-list>
 
   </mat-sidenav>
@@ -22,9 +23,7 @@
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
       <span>Leave Management System </span>
-      <button tuiLink appearance="outlined" class="ms-auto" (click)="logout()"> Logout
-      <tui-svg  src="tuiIconLogOut"  class="ms-1"></tui-svg>
-    </button>
+      <tui-svg  src="tuiIconLogOut" type="button"  class="ms-auto" (click)="logout()"></tui-svg>
     </mat-toolbar>
     <router-outlet></router-outlet>
   </mat-sidenav-content>
