--- a/src/app/manage-employees/list-employees/list-employees.component.html
+++ b/src/app/manage-employees/list-employees/list-employees.component.html
@@ -1,36 +1,23 @@
 <div class="admin-body container">
-  <!-- Navigation breadcrumbs -->
-  <tui-breadcrumbs size="l" class="py-4">
-    <ng-container>
-      <a *tuiItem tuiLink> Manage </a>
-      <a *tuiItem tuiLink> Employees </a>
-    </ng-container>
-  </tui-breadcrumbs>
-
   <!-- View employee list -->
 
-  <div class="mt-3 container">
+  <div class="py-3">
     <div class="d-flex justify-content-between align-items-center mb-3">
-      <mat-form-field
-      class="form-field" appearance="outline">
-        <mat-label>Filter</mat-label>
-        <input
-          matInput
-          (keyup)="applyFilter($event)"
-          placeholder="Ex. John"
-          #input
-        />
-      </mat-form-field>
+      <input
+        matInput
+        (keyup)="applyFilter($event)"
+        placeholder="Filter"
+        #input
+      />
       <div>
-        <button
-          tuiButton
-          appearance="flat"
+        <tui-svg
+          src="tuiIconRefreshCw"
+          type="button"
           class="me-2"
+          [ngClass]="load ? 'rotate' : ''"
           size="s"
           (click)="loadUsers()"
-        >
-          <tui-svg src="tuiIconRefreshCwLarge"></tui-svg>
-        </button>
+        ></tui-svg>
         <button tuiButton appearance="flat" size="s" (click)="showDialog(form)">
           Add <tui-svg src="tuiIconUserPlus"></tui-svg>
 
@@ -123,6 +110,7 @@
                     Delete
                   </button>
                 </ng-template>
+
                 <div class="d-none d-lg-block">
                   <button
                     tuiButton
