--- a/src/app/manage-holidays/holidayform/holidayform.component.html
+++ b/src/app/manage-holidays/holidayform/holidayform.component.html
@@ -1,45 +1,46 @@
 <tui-loader size="xl" [overlay]="true" [showLoader]="load">
-    <form class="container-lg" [formGroup]="holidayForm" (ngSubmit)="onSubmit()">
-      <div class="tui-form__header" *ngIf="!edit">Add Holiday Details</div>
-      <div class="tui-form__header" *ngIf="edit">Update Holiday Details</div>
-      <div class="tui-form__row_multi-fields tui-form__row">
+  <form class="container-lg" [formGroup]="holidayForm" (ngSubmit)="onSubmit()">
+    <div class="tui-form__header" *ngIf="!edit">Add Holiday Details</div>
+    <div class="tui-form__header" *ngIf="edit">Update Holiday Details</div>
+    <div class="tui-form__row_multi-fields tui-form__row">
 
-        <div class="tui-form__multi-field">
-          <tui-input formControlName="name" tuiHintContent="A tooltip">
-            Name
-            <input tuiTextfield placeholder="Enter full name" />
-            <span class="tui-required"></span>
-          </tui-input>
-        </div>
+      <div class="tui-form__multi-field">
+          <mat-form-field class="example-full-width">
+            <mat-label>Holiday Name</mat-label>
+            <input formControlName="name" matInput placeholder="Ex. Pizza" value="Sushi">
+          </mat-form-field>
       </div>
-      <div class="tui-form__row">
-        <tui-input-date formControlName="date" tuiHintContent="A tooltip">
-          Date
-          <input tuiTextfield placeholder="Enter position" />
-          <span class="tui-required"></span>
-        </tui-input-date>
-        <tui-error></tui-error>
+      <div class="tui-form__multi-field">
+        <mat-form-field class="example-full-width">
+          <mat-label>Choose a date</mat-label>
+          <input matInput formControlName="date" [matDatepicker]="picker">
+          <mat-hint>MM/DD/YYYY</mat-hint>
+          <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+          <mat-datepicker #picker></mat-datepicker>
+        </mat-form-field>    
       </div>
-      <div tuiGroup class="group tui-form__row" [collapsed]="true">
-        <tui-radio-labeled
-          *ngFor="let type of types"
-          formControlName="type"
-          contentAlign="right"
-          size="l"
-          [item]="type"
-        >
-          {{ type }}
-        </tui-radio-labeled>
-      </div>
-      <div class="tui-form__buttons">
-        <button
-          tuiButton
-          type="button"
-          class="tui-form__button"
-          (click)="onSubmit()"
-        >
-          Submit
-        </button>
-      </div>
-    </form>
-    </tui-loader>
+    </div>
+    
+    <div tuiGroup class="group tui-form__row" [collapsed]="true">
+      <tui-radio-labeled
+        *ngFor="let type of types"
+        formControlName="type"
+        contentAlign="right"
+        size="l"
+        [item]="type"
+      >
+        {{ type }}
+      </tui-radio-labeled>
+    </div>
+    <div class="tui-form__buttons">
+      <button
+        tuiButton
+        type="button"
+        class="tui-form__button"
+        (click)="onSubmit()"
+      >
+        Submit
+      </button>
+    </div>
+  </form>
+  </tui-loader>
