--- a/src/app/manage-holidays/list-holidays/list-holidays.component.html
+++ b/src/app/manage-holidays/list-holidays/list-holidays.component.html
@@ -1,36 +1,22 @@
 <div class="body container">
-  <tui-breadcrumbs size="l" class="py-4">
-    <ng-container>
-      <a *tuiItem tuiLink routerLink="/admin"> Manage </a>
-      <a *tuiItem tuiLink routerLink="/holidays" routerLinkActive="link-active">
-        Holidays
-      </a>
-    </ng-container>
-  </tui-breadcrumbs>
-
-
-  <div class="mt-3 d-flex justify-content-between align-items-center">
-    <mat-form-field appearance="outline">
-      <mat-label>Filter</mat-label>
-      <input
-        matInput
-        (keyup)="filterHolidays(filter.value)"
-        placeholder="Ex. Republic Day"
-        name="filterText"
-        #filter
-      />
-    </mat-form-field>
+  <div class="py-3 d-flex justify-content-between align-items-center">
+    <input
+      matInput
+      (keyup)="filterHolidays(filter.value)"
+      placeholder="Filter"
+      name="filterText"
+      #filter
+    />
 
     <div>
-      <button
-        tuiButton
-        appearance="flat"
+      <tui-svg
+        src="tuiIconRefreshCw"
         class="me-2"
+        [ngClass]="loader ? 'rotate' : ''"
         size="s"
+        type="button"
         (click)="loadHolidays()"
-      >
-        <tui-svg src="tuiIconRefreshCwLarge"></tui-svg>
-      </button>
+      ></tui-svg>
       <button
         tuiButton
         appearance="secondary"
@@ -44,7 +30,6 @@
     </div>
   </div>
 
-
   <tui-loader size="xl" class="mt-3" [showLoader]="loader" [overlay]="true">
     <div class="row">
       <div
@@ -54,7 +39,7 @@
         <a
           size="l"
           class="island-card"
-          [ngClass]="upcomingDate(item.date) ? 'bg-green ' : 'bg-grey '"
+          [ngClass]="upcomingDate(item.date) ? 'bg-green ' : 'bg-grey'"
           tuiIsland
           [hoverable]="true"
         >
