--- a/src/app/manage-holidays/list-holidays/list-holidays.component.scss
+++ b/src/app/manage-holidays/list-holidays/list-holidays.component.scss
@@ -1,25 +1,43 @@
 @import '@taiga-ui/core/styles/taiga-ui-local.scss';
 
 .body {
-    // max-width: 62.5rem;
-    // margin: 0 auto;
+    min-height: calc(100vh - 56px);
     .island-card{
         box-shadow: none !important;
         margin: 0;
         height: auto;
     }
+    input {
+        border: 0;
+        border-bottom: 1px solid rgba(black,.1);
+        padding: .5rem;
+    }
 }
+.rotate{
+    animation: rot 1s linear infinite;
+  }
+  
+  @keyframes rot {
+    0% {
+      transform: rotate(0deg)
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
  
 .some-figure {
     border-radius: 100%;
     width: 3rem;
     height: 3rem;
-    color: var(--tui-secondary-fill) !important;
-    background-color: var(--tui-secondary-active);
+    *{
+        color: black !important;
+    }
 }
 
 .bg-green {
     outline:1px solid var(--tui-success-bg-night);
+    background-color: var(--tui-success-bg-night);
     color:var(--tui-positive);
     &:hover {
         outline:1px solid var(--tui-success-bg-night-hover);
@@ -27,6 +45,7 @@
 }
 .bg-grey {
     outline:1px solid var(--tui-info-bg-night);
+    background-color: var(--tui-info-bg-night);;
     color:var(--tui-link);
     &:hover {
         outline:1px solid var(--tui-info-bg-night-hover);
