--- a/src/app/manage-leaves/leave-list/leave-list.component.html
+++ b/src/app/manage-leaves/leave-list/leave-list.component.html
@@ -1,17 +1,9 @@
-<div class="container leave-container">
-  <tui-breadcrumbs size="l" class="py-4">
-    <ng-container>
-      <a *tuiItem tuiLink routerLink="/admin"> Manage </a>
-      <a *tuiItem tuiLink routerLink="/leaves" routerLinkActive="link-active">
-        Leaves
-      </a>
-    </ng-container>
-  </tui-breadcrumbs>
+<div class="container leave-container py-3">
 
   <button tuiButton size="s" appearance="flat" icon="tuiIconRefreshCcw" (click)="getLeaves()">Refresh</button>
 
   <tui-loader [showLoader]="load" [overlay]="true" size="xl">
-    <div class="mt-3 d-flex flex-column flex-md-row gap-2">
+    <div class="py-3 d-flex flex-column flex-md-row gap-2">
       <ng-container *ngFor="let item of arr">
         <div class="card" *ngIf="item.status == 'pending'">
           <div
@@ -47,7 +39,7 @@
               <span>
                 <span class="muted">Date(s):</span>
                 {{ item.from | date : "dd-MMM" }}
-                <span class="muted"> to </span>
+                <span class="muted" *ngIf="item.to"> to </span>
                 {{ item.to | date : "dd-MMM" }}</span
               >
             </div>
