--- a/src/app/client/leave-request/leave-request.component.html
+++ b/src/app/client/leave-request/leave-request.component.html
@@ -1,1 +1,20 @@
-<p>leave-request works!</p>
+<div class="container">
+  <mat-tab-group>
+    <mat-tab label="Apply">
+      <div class="p-2">
+        <div class="d-flex gap-2">
+          Granted :
+          <div class="cl"></div>
+          {{cl}} casual leaves
+
+          <div class="sl"></div>
+          {{sl}} sick leaves
+        </div>
+      </div>
+
+      <app-leave-form (update)="update($event)"></app-leave-form>
+    </mat-tab>
+    <mat-tab label="Pending"> <app-leave-list [ID]="id"></app-leave-list> </mat-tab>
+    <mat-tab label="Completed"> Content 3 </mat-tab>
+  </mat-tab-group>
+</div>
