--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -5,10 +5,10 @@
       [opened]="(isHandset$ | async) === false">
     <mat-toolbar><tui-svg src="tuiIconUserLarge" class="me-2"></tui-svg> {{name | uppercase}}</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item routerLink="user" [routerLinkActive]="['is-active']" *ngIf="isClient"><tui-svg src="tuiIconUsers"></tui-svg> Dashboard</a>
-      <a mat-list-item routerLink="admin" [routerLinkActive]="['is-active']" *ngIf="!isClient"><tui-svg src="tuiIconUsers"></tui-svg> Employees</a>
-      <a mat-list-item routerLink="holidays" [routerLinkActive]="['is-active']" *ngIf="!isClient"><tui-svg src="tuiIconCalendar"></tui-svg> Holidays</a>
-      <a mat-list-item routerLink="leaves" [routerLinkActive]="['is-active']" *ngIf="!isClient"><tui-svg src="tuiIconCreditCard"></tui-svg> Leaves</a>
+      <a mat-list-item routerLink="user" [routerLinkActive]="['is-active']" *ngIf="!isAdmin"><tui-svg src="tuiIconUsers"></tui-svg> Dashboard</a>
+      <a mat-list-item routerLink="admin" [routerLinkActive]="['is-active']" *ngIf="isAdmin"><tui-svg src="tuiIconUsers"></tui-svg> Employees</a>
+      <a mat-list-item routerLink="holidays" [routerLinkActive]="['is-active']" *ngIf="isAdmin"><tui-svg src="tuiIconCalendar"></tui-svg> Holidays</a>
+      <a mat-list-item routerLink="leaves" [routerLinkActive]="['is-active']" *ngIf="isAdmin"><tui-svg src="tuiIconCreditCard"></tui-svg> Leaves</a>
     </mat-nav-list>
 
   </mat-sidenav>
